--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
+body{
+  background-color: #fbfaf9;
+}
+
 .container{
 width:100%;
 height:100%;
 font-family: "Open Sans",Helvetica,Arial,sans-serif;
-background-color: #e9e9e2;
 
 }
 .header{
   width: 100%;
+  margin-left: -10px;
+  /*margin-right: -100px;*/
   background-color: white;
-  border-top: 5px solid #e65c00;
-  border-bottom: 1px solid #a6a6a6;
+  border-top: 5px solid #F05A50;
+  border-bottom: 1px solid #e9e7e1;
   padding: 25px;
-  margin-top: -10px;
+  margin-top: -11px;
 }
 .title{
   color:#8c8c8c;
@@ -24,14 +29,15 @@ background-color: #e9e9e2;
 }
 .gallery{
   padding:20px;
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 60px;
   text-align:center;
 }
 .image{
   margin-right:5px;
  /* position: absolute;*/
+ width:250px;
   cursor: pointer;
   border: 2px solid #000;
-  display: inline-block;
+  /*display: inline-block;*/
 }
