--- a/style.css
+++ b/style.css
@@ -36,10 +36,9 @@ font-family: "Open Sans",Helvetica,Arial,sans-serif;
 .image{
   margin-right:5px;
   margin:3px;
-  border: 2px solid none;
+  border: 2px solid #fbfaf9;
  /* position: absolute;*/
   width:250px;
   cursor: pointer;
-  border: 0px solid #000;
   /*display: inline-block;*/
 }
