--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
 width:100%;
 height:100%;
 font-family: "Open Sans",Helvetica,Arial,sans-serif;
-
+letter-spacing: 1px;
+text-transform:uppercase;
 }
 .header{
   width: 100%;
@@ -28,12 +29,13 @@ font-family: "Open Sans",Helvetica,Arial,sans-serif;
 
 .titleText{
   position: absolute;
-  margin-left: 35px;
+  margin-left: 45px;
   margin-top: 5px;
 }
 
 .titleText span{
   font-weight: 500;
+  font-size: 12px;
 }
 .gallery{
   padding:20px;
@@ -41,12 +43,19 @@ font-family: "Open Sans",Helvetica,Arial,sans-serif;
   padding-bottom: 60px;
   text-align:center;
 }
+.drag{
+  /*background-color: grey;*/
+  /*position:relative*/
+  margin-top: 190px;
+  margin: 5px;
+  margin-bottom: 130px;
+}
+
 .image{
-  margin-right:5px;
-  margin:3px;
+  z-index: -1;
   border: 2px solid #fbfaf9;
  /* position: absolute;*/
   width:250px;
-  cursor: pointer;
-  /*display: inline-block;*/
+  padding-bottom: 0px;
+ cursor:move;  /*display: inline-block;*/
 }
