--- a/style.css
+++ b/style.css
@@ -44,18 +44,17 @@ text-transform:uppercase;
   text-align:center;
 }
 .drag{
-  /*background-color: grey;*/
-  /*position:relative*/
+  background-color: none;
   margin-top: 190px;
   margin: 5px;
-  margin-bottom: 130px;
+  padding-bottom:50px;
+  margin-top: -100px;
 }
 
 .image{
   z-index: -1;
-  border: 2px solid #fbfaf9;
- /* position: absolute;*/
+  border: 3px solid #fbfaf9;
   width:250px;
   padding-bottom: 0px;
- cursor:move;  /*display: inline-block;*/
+  cursor:move;  
 }
